# ERAS-MCP

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  ENVIRONMENT_SCAN.md  ERAS_MDB_SCHEMA.md  ERAS_OpenCitiesMap_MCP_Kickoff.md  EVIDENCE_INDEX.md  MASTER_PROMPT_Codex_Orchestrator.md  PLAN.md  POWEMAP_AUTOMATION_SURFACE.md  PRD.md  README.md  RISK_REGISTER.md  SECURITY_GUARDRAILS.md  TEST_STRATEGY.md  WINDOWS_INVENTORY.md  pyproject.toml  requirements.txt
docs/evidence/: ev-001-windows-scan-baseline.md  ev-002-powermap-surface.md  ev-003-eras-mdb-schema.md  ev-004-security-guardrails.md  ev-005-test-strategy-validation.md  ev-006-risk-review.md  ev-007-evidence-process-audit.md  ev-008-mcp-facade.md  ev-009-eras-authoritative-candidates.md  ev-010-eras-mdb-human-review-pack.md  ev-011-eras-mdb-human-decisions.md  ev-012-eras-mdb-decision-intake.md
docs/reports/: eras_mdb_authoritative_candidates_20260423.md  eras_mdb_candidate_review_20260423.md  eras_mdb_human_decision_status_20260424.md  eras_mdb_odbc_warning_triage_20260423.md  mvp_gap_report_20260423.md  mvp_readonly_baseline_20260423.md
docs/reviews/: ERAS_MDB_HUMAN_DECISIONS_20260424.csv
docs/scans/: POWEMAP_AUTOMATION_SURFACE_TEMPLATE.md  WINDOWS_INVENTORY_TEMPLATE.md
docs/schemas/: ERAS_MDB_CANDIDATE_SCORECARD.csv  ERAS_MDB_FIELD_DICTIONARY.md  ERAS_MDB_RELATIONSHIPS.md  ERAS_MDB_RISKS.md  ERAS_MDB_SAMPLE_QUERIES.sql  ERAS_MDB_SCHEMA.md
scripts/eras/: README.md  eras_mdb_discovery.py
scripts/powermap/: Get-PowerMapReadOnlyInventory.ps1  README.md
scripts/windows_scan/: Invoke-WindowsReadOnlyInventory.ps1  (+1 more)
(+22 files in other folders)
